--- a/profiles.yml
+++ b/profiles.yml
@@ -14,7 +14,7 @@ default: # this needs to match the profile in your dbt_project.yml file
         type: service_account
         project_id: dbttutorial-462304
         private_key_id: 36c4c377c3f73c431fbf5b533ad08ef8b2cd8896
-        private_key: {{ env_var('PRIVATE_KEY') }}
+        private_key: "{{ env_var('PRIVATE_KEY') }}"
         client_email: dbt-demo@dbttutorial-462304.iam.gserviceaccount.com
         client_id: 108218813793844706899
         auth_uri: https://accounts.google.com/o/oauth2/auth
