--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,47 @@
+# job名字
 name: dbt build
 
+# workflow 是 手動觸發 的，而不是在 push、pull request 等事件發生時執行
 on:
   workflow_dispatch:
 
+#讀取這repo的secrets中名叫PK的Repository secrets
+# 這要到repo的settings-->Security --> Secrets and variables --> Actions --> Repository secrets設定
 env:
   PRIVATE_KEY: ${{ secrets.PK }}
 
+
+# 定義要做的事情
 jobs:
+
+  # 該名字的job要做什麼
   dbt_build:
-    runs-on: ubuntu-latest
+    # 要在哪個 runner 上跑，這裡是 GitHub 提供的最新 Ubuntu Linux 虛擬機器
+    runs-on: ubuntu-latest 
+    
+    # 定義job步驟
     steps:
+    
+      # 下載你 repo 裡的程式碼到 runner
       - name: Checkout to the branch
         uses: actions/checkout@v3
+        
+      # 安裝一個 3.x 版本的 Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+
+      # 升級pip跟安裝repo中的requirements.txt內的套件
       - name: Install dependencies
         run: python -m pip install --upgrade pip
       - name: Install requirements.txt
         run: pip install -r requirements.txt
+
+      # 安裝 dbt_project.yml 中所列出的 dbt packages（像是 dbt-utils 等）
       - name: Install dbt dependencies
         run: dbt deps
+
+      # 這會跑 dbt models 的 full pipeline，包括 run, test
       - name: dbt Build
         run: dbt build
